# vistab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FUNCTIONAL_SPEC.md  LICENSE  NOTICE  README.md  RELEASING.md  TODO.md  demo.txt  out.txt  out_bin.txt  output.txt  pyproject.toml  styles.txt  test_vistab.toml  trace.txt  unitable.py
.agents/docs/walkthroughs/: 20260710-1423-01-walkthrough.md  20260710-1423-walkthrough.md
.agents/plans/executed/: 2026-07-09-assess-performance.md  20260709-assess-documentation-merged.md  (+18 more)
.agents/workflows/: index.md
.github/workflows/: secret-scan.yml  test.yml
benchmarks/: bench_render.py
docs/: API.md  CLI.md
examples/: basic_usage.py  colspan_demo.py  styled_matrix.py
src/: vistab.py
src/vistab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_demo.py  test_edge.py  test_regression.py  test_streaming.py  test_vistab.py
tests/data/: csvforge.py  long_100x8.csv  long_5x10.csv  small_1x1.csv  small_4x6.csv  small_5x5.csv  small_7x12.csv  test_5x11.csv  test_precision_matrix.csv
tests/fixtures/: regression_abnormal_highlighting.txt  regression_ansi_context_leak_prevention.txt  regression_ansi_word_chunking_basic_color.txt  regression_ansi_word_chunking_complex_color.txt  regression_ansi_word_chunking_comprehensive.txt  regression_ansi_word_chunking_multi.txt  regression_ansi_word_chunking_simple.txt  regression_ansi_word_chunking_stray_color.txt  regression_ansi_wrap_conflict.txt  regression_api_dynamic_typing.txt  regression_api_theme_dictionary.txt  regression_cli_save_theme.txt  regression_cli_show_code.txt  regression_colspan_support.txt  regression_complex_theme.txt  regression_conflict_stream_and_sort.txt  regression_demo_anatomy.txt  regression_demo_capabilities.txt  regression_demo_colors.txt  regression_demo_styles.txt  regression_diagnostic_matrix.txt  regression_edge_1x1_no_header.txt  regression_edge_1x1_with_header.txt  regression_edge_1xn_no_header.txt  regression_edge_1xn_with_header.txt  regression_inline_precisions.txt  regression_jagged_skip_handling.txt  regression_pipeline_multi_file.txt  regression_pipeline_stdin.txt  regression_small_default.txt  regression_stream_eof_probe_exceed.txt  regression_stream_no_header_borderless.txt  regression_stream_stdin_clip.txt  regression_theme_override.txt  regression_tsv_dialect_stream.txt  regression_wide_cjk_streaming.txt  regression_zero_data_matrices.txt
(+142 files in other folders)
