[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vistab"
version = "1.1.0"
description = "A simple module for creating ASCII tables"
authors = [
    { name = "Gabriele Fariello", email = "gfariello@fariel.com" }
]
readme = "README.md"

license = "BSD-3-Clause"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "wcwidth",
]

[project.optional-dependencies]
cjk = ["cjkwrap"]
dev = ["pytest"]

[project.scripts]
vistab = "vistab:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["vistab"]
