[build-system]
requires = ["setuptools>=61.0, <69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vistab"
version = "1.2.0"
description = "Beautiful terminal ASCII/Unicode tables: themes, column spanning, color-aware wrapping, and CJK/RTL-correct widths"
authors = [
    { name = "Gabriele G. R. Fariello", email = "gfariello@fariel.com" }
]
readme = "README.md"

license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "wcwidth",
]

[project.urls]
Homepage = "https://github.com/fariello/vistab"
Documentation = "https://github.com/fariello/vistab/blob/v1.2.0/docs/API.md"
Source = "https://github.com/fariello/vistab"
Changelog = "https://github.com/fariello/vistab/blob/v1.2.0/CHANGELOG.md"
Issues = "https://github.com/fariello/vistab/issues"

[project.optional-dependencies]
cjk = ["cjkwrap"]
dev = ["pytest"]

[project.scripts]
vistab = "vistab:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["vistab"]
